M_23:
1. Fixed bug in Planner where it was retracting all the way out of the first decision failed. See System/tests/rejection.nddl.
2. Reimplemented existential and universal quantification, driven by GNATS-2489.
3. Implemented support for constraints of any arity and streamlined factory mechanism for constraints. Unary and Non-uanry construction is all the same now. Removed all special support for unary constraints, except for the provision for testing if a constraint is unary.


M_22:
1. Added NegationConstraint.
2. Added support for a PlannerConfig class in NDDL, rather than using NddlWorld.
3. Completed support for object dynamicity, addressing GNATS 2342.
4. Decision manager cleans up decisions even if other agents closed
them, addressing GNATS 2493.

M_21:
1. Changed object decision model to avoid incompleness in search.
2. GNATS addressed in this milestone: 2469, 2485

M_20:
1. Main focus has been a re0implementation of internals of resources to simplify it.
2. GNATS addressed in this milestone: 2477, 2472, 2471, 2470, 2460, 2458, 2457, 2431, 2409, 2480
	
M_19:
1. Fixed some bugs in the planner in order to get new test case working. See
System/test/resource-backtrack.nddl
2. Include foreach example in system tests. Still have to get it working with file based copy.

M_18:
1. Agent Database has been added. New module for multi-threaded access. Baseline version.
2. A number of synchronization problems with Id's in Resources and in the Planner discovered and fixed.
3. A plethora of gnats fixes.
4. Support for 'foreach' semantics in NDDL and in the rules engine.
5. Incorporated temporary fix for accessing active tokens in slaves. This will only work for a chronological backtrack.
6. Added some code for getting more precise distance relationships from the temporal advisor.

M_17:
1. First tag in new PLASMA cvs directory.
2. Minor build patches.

MIGRATED:
1. Migrated to PLASMA build structure and cvs directory.

M_16:
?

M_15: